src/layouts/AppLayout.module.css
.layout {
  display: flex;
  flex-direction: row;
  gap: 20px;
  min-height: 100vh;
  box-sizing: border-box;
  flex-wrap: wrap;
}

.footer {
  flex-basis: 100%;
}

.cookieSettings {
  cursor: pointer;
}

.cookieSettings:hover {
}

